Revert "working on switching to internal API"
This reverts commit 9f961d8156fadf2df13e66fc1dfbae2e5c591b22.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,9 +51,7 @@ catkin_python_setup()
 ## Generate messages in the 'msg' folder
 add_message_files(
   FILES
-  FlightData.msg
-  MVO.msg
-  IMU.msg
+  RollPitchYaw.msg
   TelloState.msg
   CmdTello.msg
 )
